// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with any date and any time (empty time set) 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    style={Object {}}
  >
    <View
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any day"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any time"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </View>
    </View>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with any date and any time 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    style={Object {}}
  >
    <View
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any day"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Any time"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </View>
    </View>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with date range and two times 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    style={Object {}}
  >
    <View
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="2 Feb - 3 Feb"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Morning, Afternoon"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </View>
    </View>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;

exports[`renders correctly with single date and single time 1`] = `
<withOrientation
  forceInset={
    Object {
      "top": "always",
    }
  }
  style={
    Object {
      "backgroundColor": "rgb(45, 47, 127)",
    }
  }
>
  <StatusBar
    animated={true}
    barStyle="light-content"
    showHideTransition="fade"
  />
  <ContentPadding
    style={Object {}}
  >
    <View
      style={
        Object {
          "paddingBottom": 12,
          "paddingTop": 16,
        }
      }
      testID="filter-header"
    >
      <FilterHeaderCategories
        onFilterPress={[Function]}
        selectedCategories={Set {}}
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "marginTop": 8,
          }
        }
      >
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="2 Feb"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Afternoon"
        />
        <FilterHeaderButton
          onPress={[Function]}
          style={
            Object {
              "marginRight": 8,
            }
          }
          text="Filters"
        />
      </View>
    </View>
  </ContentPadding>
  <Connect(DateRangePickerDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
  <Connect(MultiSelectDialog)
    onApply={[Function]}
    onCancel={[Function]}
    visible={false}
  />
</withOrientation>
`;
